SERVER-67898 Add chunk size in bytes to BalancerCollectionStatusResponse